# go2_fastlio2_nav2_museum

./: .gitignore  Makefile  README.md  dependencies.repos
docs-CN/: architecture.md  index.md  unitree_sdk.md
docs-EN/: architecture.md  index.md  unitree_sdk.md
scripts/: init_runtime_data.sh  launch_with_logs.sh  setup_unitree_sdk.sh
src/bringup/: CMakeLists.txt  package.xml
src/bringup/config/: guide_waypoints.example.yaml  master_params.yaml  nav2_indoor.yaml
src/bringup/launch/: system_guide.launch.py  system_slam.launch.py
src/control/go2_cmd_bridge/: package.xml  setup.cfg  setup.py
src/control/go2_cmd_bridge/go2_cmd_bridge/: __init__.py  cmd_bridge_node.py
src/control/go2_cmd_bridge/resource/: go2_cmd_bridge
src/navigation/museum_guide_manager/: package.xml  setup.cfg  setup.py
src/navigation/museum_guide_manager/config/: waypoints.example.yaml
src/navigation/museum_guide_manager/museum_guide_manager/: __init__.py  guide_manager_node.py
src/navigation/museum_guide_manager/resource/: museum_guide_manager
src/perception/: README.md
src/sensor_drivers/: README.md
