<?xml version="1.0"?>
<package format="3">
  <name>bringup</name>
  <version>0.1.0</version>
  <description>Shared launch and configuration for the Go2 museum guide stack.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>go2_cmd_bridge</exec_depend>
  <exec_depend>museum_guide_manager</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
