<?xml version="1.0"?>
<package format="3">
  <name>go2_cmd_bridge</name>
  <version>0.1.0</version>
  <description>Safe ROS 2 cmd_vel bridge scaffold for Unitree Go2.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
