<?xml version="1.0"?>
<package format="3">
  <name>museum_guide_manager</name>
  <version>0.1.0</version>
  <description>Waypoint mission manager scaffold for the Go2 museum guide robot.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
